# hyprsunset

./: .gitignore  CMakeLists.txt  README.md  flake.nix
.github/workflows/: nix-build.yml
nix/: default.nix  overlays.nix
src/: ConfigManager.cpp  ConfigManager.hpp  EventManager.cpp  EventManager.hpp  Hyprsunset.cpp  Hyprsunset.hpp  IPCSemaphore.cpp  IPCSemaphore.hpp  IPCSocket.cpp  IPCSocket.hpp  InstanceLock.cpp  InstanceLock.hpp  SunCalc.cpp  SunCalc.hpp  main.cpp  meson.build
src/helpers/: GetRuntimeDir.cpp  GetRuntimeDir.hpp  Log.hpp  MiscFunctions.cpp
systemd/: hyprsunset.service.in
